--- a/PebbleMenu/AndroidManifest.xml
+++ b/PebbleMenu/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
