--- a/PebbleMenu/AndroidManifest.xml
+++ b/PebbleMenu/AndroidManifest.xml
@@ -21,7 +21,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,7 +37,7 @@
                 <action android:name="com.getpebble.action.app.NACK" />
             </intent-filter>
         </receiver>
-        <receiver android:name="nl.jawsper.android.pebblemenu.receivers.MusicIntentReceiver" >
+        <receiver android:name="nl.jawsper.android.pebblemenu.receivers.MusicNowPlayingReceiver" >
             <intent-filter>
                 <action android:name="com.amazon.mp3.metachanged" />
                 <action android:name="com.andrew.apollo.metachanged" />
