--- a/PebbleMenu/project.properties
+++ b/PebbleMenu/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=..\\PEBBLE_KIT
+android.library.reference.1=../PEBBLE_KIT
 android.library.reference.2=../AgendaTools
